apps/siewgenerator-api/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: siewgenerator-api
spec:
  selector:
    app: siewgenerator-api
  ports:
    - port: 5000
      targetPort: 5000
      name: http-api
      protocol: TCP
  type: ClusterIP
